# monte_carlo

./: .gitignore  README.md
TP1/: CMakeLists.txt  CMakePresets.json  README.md
TP1/res/solution/: hitting-time.ipynb
TP1/src/: main.cpp
TP1/src/tests/: data.txt  data_refine.txt  tests.ipynb
TP1/src/tests/.ipynb_checkpoints/: tests-checkpoint.ipynb
TP2/: CMakeLists.txt  CMakePresets.json  main.cpp
TP2/res/: variance-reduction.ipynb
TP2/src/: main.cpp  main.ipynb
TP2/src/tests/: tests.ipynb
TP3/res/: solution-tp3.ipynb
TP3/src/: main.ipynb
TP4/src/: main.ipynb
TP5/src/: main.ipynb
TP6/skel-functional-hedge/: main.ipynb  pnl.txt
TP6/skel-functional-hedge/dat/: call-104.json  call-13.json  call-208.json  call-26.json  call-365.json  call-52.json
TP6/skel-functional-hedge/src/: AsianOption.hpp  CMakeLists.txt  FunctionalHedger.cpp  HedgingResults.cpp  HedgingResults.hpp  Martingale.cpp  Martingale.hpp  Model.cpp  Model.hpp  MonteCarlo.cpp  MonteCarlo.hpp  MountainOption.cpp  MountainOption.hpp  Option.cpp  PnlVectToJson.cpp  PnlVectToJson.hpp  PricingResults.cpp  PricingResults.hpp  TestModel.cpp  TestModel.hpp  TestOption.cpp  TestOption.hpp  compare.cpp  compare.hpp  generate-data.cpp  hedge-tojson.cpp  main.cpp  main_functionalHedging.cpp  main_pnl.cpp  price0-tojson.cpp
TP7/: main.ipynb
TP7/.ipynb_checkpoints/: main-checkpoint.ipynb
TP8/: AsianOption.py  BlackScholesModel.py  MonteCarlo.py  main.py
